# sqlvibe

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.sh  go.mod  telemetry-id
.github/workflows/: codeql.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
cmd/sqlvibe/: main.go
cmd/sv-check/: main.go
cmd/sv-cli/: autocompleter.go  exporter.go  formatter.go  history.go  importer.go  main.go  sqlfile.go
docs/: ARCHITECTURE.md  ARCHITECTURE_GAPS.md  DB-FORMAT.md  GO_TO_CPP_MIGRATION_ANALYSIS.md  HISTORY.md  IMPLEMENTATION_PLAN.md  MIGRATION_100_PERCENT.md  MIGRATION_COMPLETE.md  MIGRATION_LEGACY_REMOVAL.md  MIGRATION_PHASE1_COMPLETE.md  MIGRATION_PHASE1_SUMMARY.md  MIGRATION_PROGRESS.md  MIGRATION_STATUS.md  PHASES.md  ROADMAP.md  SQL1999.md  SQL1999_FIX_PLAN.md  SQL1999_TEST_FAILURES.md  SQL1999_TEST_PLAN.md  STATUS.md  btree-design.md  coverage-improvement-plan-v0.10.2.md  coverage-improvement-plan.md  phase3-plan.md  plan-cgo-phase2.md  plan-cgo-phase3-cg.md  plan-cgo-phase4-integration.md  plan-cgo-switch.md  plan-cgo.md  plan-information-schema.md  plan-v0.10.0.md  plan-v0.10.1.md  plan-v0.10.10.md  plan-v0.10.11.md  plan-v0.10.12.md  plan-v0.10.13.md  plan-v0.10.14.md  plan-v0.10.15.md  plan-v0.10.16.md  plan-v0.10.17.md  (+66 more)
driver/: conn.go  driver.go  driver_test.go  result.go  rows.go  stmt.go  tx.go  value.go
ext/: extension.go  extension_test.go  registry.go
ext/fts5/: CMakeLists.txt  README.md  fts5.go  fts5.h  fts5_cgo.go  fts5_pure.go  fts5_test.go  index.go  init.go  query.go  rank.go  tokenizer.go
ext/json/: CMakeLists.txt  json.go  json_cgo.go  json_helpers.go  json_impl.go  json_pure.go  json_test.go
ext/math/: CMakeLists.txt  math.go  math.h  math_cgo.go  math_pure.go  math_test.go
ext/profiling/: profiling.go
internal/CG/: bytecode_compiler.go  bytecode_compiler_cgo.go  bytecode_compiler_test.go  bytecode_expr.go  cache_test.go  cg_cgo.go  cg_cgo_bench_test.go  cg_cgo_test.go  compiler.go  compiler_test.go  direct_compiler.go  direct_compiler_cgo.go  expr.go  expr_compiler.go  expr_compiler_cgo.go  expr_compiler_test.go  optimizer.go  plan_cache.go  plan_cache_cgo.go  register_cgo.go  stmt_cache.go
internal/CG/cgo/: CMakeLists.txt  compiler.cpp  optimizer.cpp
internal/DS/: arena.go  backup.go  balance.go  balance_cgo.go  balance_test.go  bench_btree_test.go  bench_encoding_test.go  bloom_filter.go  btree.go  btree_cgo.go  btree_cgo_test.go  btree_cursor_cgo.go  btree_test.go  cache.go  cache_cgo.go  cell.go  cell_test.go  cgo_ds_cgo.go  cgo_ds_pure.go  cgo_ds_simd_cgo.go  cgo_ds_simd_pure.go  column_store.go  column_store_cgo.go  column_vector.go  compact.go  compression.go  compression_cgo.go  compression_pure.go  ds_cgo.go  ds_v2_cgo.go  encoding.go  encoding_test.go  errors.go  exec_columnar.go  header.go  (+44 more)
internal/VM/cgo/: CMakeLists.txt  compare.h  string_funcs.cpp  type_conv.h
internal/wrapper/cgo/: CMakeLists.txt
scripts/: benchmark_analyze.py  benchmark_collect.sh  benchmark_compare.py
src/: CMakeLists.txt
src/core/CG/: bytecode_compiler.cpp  bytecode_compiler.h  cg.h  compiler.cpp  direct_compiler.cpp  direct_compiler.h  expr_compiler.cpp  expr_compiler.h  optimizer.cpp  optimizer.h  plan_cache.cpp  plan_cache.h  register.cpp  register.h  register_api.h
src/core/DS/: CMakeLists.txt  arena.cpp  arena.h  arena_v2.cpp  arena_v2.h  balance.cpp  balance.h  bloom_filter.cpp  bloom_filter.h  btree.cpp  btree.h  btree_cursor.cpp  btree_cursor.h  cache.cpp  cache.h  cache_v2.cpp  cache_v2.h  cell.cpp  cell.h  column_vector.cpp  column_vector.h  columnar.cpp  columnar.h  compression.cpp  compression.h  freelist.cpp  freelist.h  freelist_v2.cpp  freelist_v2.h  hybrid_store.cpp  hybrid_store_api.h  lockfree_queue.cpp  lockfree_queue.h  manager.cpp  manager.h  metrics.cpp  metrics.h  overflow.cpp  overflow.h  page.cpp  (+28 more)
src/core/IS/: is_registry.cpp  is_registry.h  schema.cpp  schema.h  vtab_api.cpp  vtab_api.h  vtab_fts5.cpp  vtab_fts5.h  vtab_registry.cpp  vtab_registry.h  vtab_series.cpp  vtab_series.h
src/core/PB/: coverage_test.go  file.go  file_test.go  io_uring.cpp  io_uring.h  mmap_vfs.cpp  mmap_vfs.h  vfs.cpp  vfs.h  vfs_memory.go
src/core/QP/: CMakeLists.txt  analyzer.cpp  analyzer.h  binder.cpp  binder.h  dag.cpp  dag.h  normalize.cpp  normalize.h  parser.cpp  parser.h  parser_alter.cpp  parser_alter.h  parser_ddl.cpp  parser_ddl.h  parser_dml.cpp  parser_dml.h  parser_expr.cpp  parser_expr.h  parser_internal.h  parser_select.cpp  parser_select.h  parser_txn.cpp  parser_txn.h  tokenizer.cpp  type_infer.cpp  type_infer.h
src/core/SC/: backup.cpp  database.cpp  exec.cpp  explain.cpp  extensions.cpp  hash_join.cpp  pools.cpp  query.cpp  result.cpp  schema.cpp  setops.cpp  statement.cpp  svdb.h  svdb_types.h
src/core/SF/: numa.cpp  numa.h  opt.cpp  opt.h  svdb_assert.h  types.h
src/core/TM/: mvcc.cpp  mvcc.h  transaction.cpp  transaction.go  transaction.h
src/core/VM/: CMakeLists.txt  aggregate.cpp  aggregate.h  aggregate_engine.cpp  aggregate_engine.h  aggregate_engine_api.h  bytecode_vm.cpp  bytecode_vm.h  bytecode_vm_api.h  compare.cpp  cursor.cpp  cursor.h  datetime.cpp  datetime.h  dispatch.cpp  dispatch.h  exec.cpp  exec.h  expr_engine.cpp  expr_engine.h  expr_engine_api.h  expr_eval.cpp  expr_eval.h  expr_optimize.cpp  expr_optimize.h  fast_hash_table.cpp  fast_hash_table.h  hash.cpp  hash.h  hash_join.cpp  hash_join_optimized.cpp  instruction.cpp  instruction.h  opcodes.cpp  opcodes.h  program.cpp  program.h  query_engine.cpp  query_engine.h  registers.cpp  (+16 more)
src/core/VM/engine/: engine.cpp  engine_api.h
src/core/cgo/: CMakeLists.txt  hash_join.h
src/core/svdb/: database.cpp  exec.cpp  fk_trigger.cpp  hash_join.cpp  io.cpp  pragma.cpp  query.cpp  svdb.h  svdb_assert.h  svdb_types.h  svdb_util.h  transaction.cpp  vacuum.cpp  window.cpp
src/ext/fts5/: CMakeLists.txt
src/ext/fts5/lib/: fts5.cpp
src/ext/json/: CMakeLists.txt  json.h
src/ext/json/lib/: json.cpp
src/ext/math/: CMakeLists.txt
src/ext/math/lib/: math.cpp
testtmp/: go.mod  main.go  main2.go  main3.go
(+1080 files in other folders)
